@@ -1,0 +1,3 @@
+HiggsWeightTest --forceVH /eos/atlas/user/j/jvasquez/public/mc15_13TeV.345317.PowhegPythia8EvtGen_NNPDF30_AZNLO_WmH125J_Hyy_Wincl_MINLO.merge.DAOD_HIGG1D1.e5734_s2726_r7772_r7676_p3015/DAOD_HIGG1D1.10692230._000019.pool.root.1
+HiggsWeightTest --forceVH /eos/atlas/user/j/jvasquez/public/mc15_13TeV.345318.PowhegPythia8EvtGen_NNPDF30_AZNLO_WpH125J_Hyy_Wincl_MINLO.merge.DAOD_HIGG1D1.e5734_s2726_r7772_r7676_p3015/DAOD_HIGG1D1.10697844._000008.pool.root.1
+HiggsWeightTest --forceVH /eos/atlas/user/j/jvasquez/public/mc15_13TeV.345319.PowhegPythia8EvtGen_NNPDF30_AZNLO_ZH125J_Hyy_Zincl_MINLO.merge.DAOD_HIGG1D1.e5743_s2726_r7772_r7676_p3015/DAOD_HIGG1D1.10803453._000002.pool.root.1
